# Ros2Gazebo

./: .gitignore  README.md  ros-humble-packages.txt
src/aruco_detector/: package.xml  setup.py
src/aruco_detector/aruco_detector/: aruco_detector.py
src/aruco_detector/launch/: aruco_single_launch.py
src/aruco_detector/scripts/: aruco_detector.py  manual_image_publisher.py
src/uas_gazebo_si/: CHANGELOG.md  CODE_OF_CONDUCT.md
src/uas_gazebo_si/launch/: load_demo.py
src/uas_gazebo_si/launch/problems/uas_demo/: uas_demo_load.launch
src/uas_gazebo_si/models/Mini3_Antarctica/: model.config  model.sdf
src/uas_gazebo_si/models/aruco_board/: model.config  model.sdf
src/uas_gazebo_si/models/aruco_board_ign/meshes/: marker.dae
src/uas_gazebo_si/models/aruco_marker_10/: model.config
src/uas_gazebo_si/models/aruco_marker_10/materials/scripts/: ArucoMarker.material
src/uas_gazebo_si/models/aruco_marker_27/: model.config
src/uas_gazebo_si/models/flying_arena_serf/: model.sdf
src/uas_gazebo_si/models/flying_arena_serf/maps/: crop.dbf  crop.shx  serf_150m_1m.pgw  serf_150m_1m.png.aux.xml  serf_150m_1m.tif  serf_150m_1m.tif.aux.xml  serf_ROI.kmz
src/uas_gazebo_si/models/flying_arena_serf/maps/MoretonBay_2014_LGA_SW_487000_6970000_1K_DEM_1m/: MoretonBay_2014_LGA_SW_487000_6970000_1K_DEM_1m.tif
src/uas_gazebo_si/models/flying_arena_serf/maps/MoretonBay_2014_LGA_SW_487000_6970000_1K_DEM_1m/Metadata/: Queensland LiDAR Data - Moreton Bay LGA 2014 Project.xml
src/uas_gazebo_si/models/flying_arena_serf/materials/textures/: LICENCE.txt
src/uas_gazebo_si/models/flying_arena_serf/meshes/: serf_greenhouse.dae
src/uas_gazebo_si/models/rescue_randy_sitting/: model.sdf
src/uas_gazebo_si/scripts/: init_simulator.sh  replay_rosbag
src/uas_gazebo_si/setup/: autoinstall_requirements.sh  install_micro-xrce-dds.sh  install_px4.sh
src/uas_gazebo_si/src/: aruco_detector.py
src/uas_gazebo_si/worlds/o134/: o134.sdf
src/uas_gazebo_si/worlds/serf/: serf.sdf
src/uas_gazebo_sim/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
src/uas_gazebo_sim/launch/: gazebo_gui.config  load_demo.sh  load_demo_2.sh  load_multi_demo.sh  load_single_demo.sh
src/uas_gazebo_sim/launch/problems/uas_demo/: uas_demo_hbv_1615.rviz  uas_demo_run.launch
src/uas_gazebo_sim/models/aruco_board_ign/: model.config  model.sdf
src/uas_gazebo_sim/models/aruco_marker_10/: model.sdf
src/uas_gazebo_sim/models/aruco_marker_27/: model.sdf
src/uas_gazebo_sim/models/aruco_marker_27/materials/scripts/: ArucoMarker.material
src/uas_gazebo_sim/models/aspa135_mini3/: model.config  model.sdf
src/uas_gazebo_sim/models/bunger_hills/: model.config  model.sdf
src/uas_gazebo_sim/models/flying_arena_serf/: model.config
src/uas_gazebo_sim/models/flying_arena_serf/maps/: crop.shp  qut_serf_greenhouse.mxd
src/uas_gazebo_sim/models/flying_arena_serf/meshes/: map.blend
src/uas_gazebo_sim/models/rescue_randy/: model.config
src/uas_gazebo_sim/models/x500_base/: model.sdf
src/uas_gazebo_sim/models/x500_vision/: model.sdf
src/uas_gazebo_sim/scripts/: aruco_detector.py  init_requirements.sh  init_simulator.sh  vscode_init.sh
src/uas_gazebo_sim/setup/: configure_workspace.sh  install_px4.sh
src/uas_gazebo_sim/setup/humble/: install_ros-humble.sh
src/uas_gazebo_sim/worlds/aspa135_m3/: aspa135_m3.sdf
src/uas_gazebo_sim/worlds/bunger/: bunger.sdf
src/uas_gazebo_sim/worlds/mini3/: mini3.sdf
src/uas_gazebo_sim/worlds/robbos/: robbos.sdf
src/yolov5_ros2/: package.xml  setup.py
src/yolov5_ros2/yolov5_ros2/: yolo_node.py
